[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/player/playerKin/playerKin.gd" type="Script" id=1]
[ext_resource path="res://assets/objs/guns/tours.obj" type="ArrayMesh" id=2]
[ext_resource path="res://src/player/playerKin/GunManager.gd" type="Script" id=3]
[ext_resource path="res://assets/objs/guns/blasterG.tres" type="ArrayMesh" id=4]
[ext_resource path="res://src/player/ui/UI.tscn" type="PackedScene" id=5]

[sub_resource type="BoxShape" id=1]

[node name="playerKin" type="KinematicBody" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="head" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="head"]
far = 8192.0

[node name="UI" parent="head/Camera" instance=ExtResource( 5 )]

[node name="Position3D" type="Position3D" parent="head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="GunManager" type="Spatial" parent="head/Camera"]
script = ExtResource( 3 )

[node name="surronding" type="MeshInstance" parent="head/Camera/GunManager"]
transform = Transform( 3, 0, 0, 0, -1.31134e-07, -3, 0, 3, -1.31134e-07, 0, 0, -0.518421 )
visible = false
mesh = ExtResource( 2 )
material/0 = null

[node name="machineGun" type="MeshInstance" parent="head/Camera/GunManager"]
transform = Transform( -1, 0, 8.9407e-08, 0, 1, 0, -8.9407e-08, 0, -1, 0, -0.5, -0.8 )
mesh = ExtResource( 4 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null

[node name="macGunPos" type="Position3D" parent="head/Camera/GunManager/machineGun"]
transform = Transform( -1, 0, -8.9407e-08, 0, 1, 0, 8.9407e-08, 0, -1, 3.36276e-07, 0.074026, 3.76119 )

[node name="machineGunTimer" type="Timer" parent="head/Camera/GunManager"]
wait_time = 0.1

[node name="OmniLight" type="OmniLight" parent="."]
omni_range = 44.0

[node name="generalFixTimer" type="Timer" parent="."]
